--- a/new-index.html
+++ b/new-index.html
@@ -146,14 +146,32 @@
             const password = document.getElementById('password').value;
             const errorDiv = document.getElementById('error-message');
 
-            if (username && password) {
-                userType = 'admin';
-                errorDiv.classList.add('hidden');
-                showDashboard();
-            } else {
-                errorDiv.textContent = 'Please enter both username and password';
+            // Clear previous error
+            errorDiv.classList.add('hidden');
+
+            // Make API call to login endpoint
+            fetch('/api/login', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ username, password })
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    userType = 'admin';
+                    showDashboard();
+                } else {
+                    errorDiv.textContent = 'Invalid username or password';
+                    errorDiv.classList.remove('hidden');
+                }
+            })
+            .catch(error => {
+                console.error('Login error:', error);
+                errorDiv.textContent = 'Login failed. Please try again.';
                 errorDiv.classList.remove('hidden');
-            }
+            });
         }
 
         function showDashboard() {
