--- a/new-index.html
+++ b/new-index.html
@@ -136,8 +136,94 @@
         let userType = 'guest';
 
         function startSurvey() {
-            userType = 'user';
-            showDashboard();
+            // Show login form for survey access
+            const mainContent = document.querySelector('main');
+            mainContent.innerHTML = `
+                <div class="max-w-md mx-auto bg-white rounded-xl shadow-lg p-8">
+                    <h2 class="text-2xl font-semibold text-gray-900 text-center mb-6">Login to Start Survey</h2>
+                    <form onsubmit="handleUserLogin(event)" class="space-y-4">
+                        <div>
+                            <input
+                                type="text"
+                                id="survey-username"
+                                placeholder="Username"
+                                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-colors"
+                                required
+                            />
+                        </div>
+                        <div>
+                            <input
+                                type="password"
+                                id="survey-password"
+                                placeholder="Password"
+                                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-colors"
+                                required
+                            />
+                        </div>
+                        <button
+                            type="submit"
+                            class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-4 rounded-lg transition-colors duration-300"
+                        >
+                            Start Survey
+                        </button>
+                        <div id="survey-error-message" class="text-red-500 text-center mt-4 hidden"></div>
+                        <div class="text-center mt-4">
+                            <button onclick="showMainPage()" class="text-blue-600 hover:text-blue-800 text-sm">
+                                ← Back to Home
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            `;
+        }
+
+        function handleUserLogin(event) {
+            event.preventDefault();
+            const username = document.getElementById('survey-username').value;
+            const password = document.getElementById('survey-password').value;
+            const errorDiv = document.getElementById('survey-error-message');
+
+            // Clear previous error
+            errorDiv.classList.add('hidden');
+
+            // Make API call to login endpoint
+            console.log('Starting survey login request for:', username);
+            fetch('/api/login', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json',
+                },
+                body: JSON.stringify({ username, password })
+            })
+            .then(response => {
+                console.log('Survey API Response status:', response.status);
+                return response.json().then(data => {
+                    if (!response.ok) {
+                        console.log('Survey API Error response:', data);
+                        throw new Error(data.error || 'Login failed');
+                    }
+                    return data;
+                });
+            })
+            .then(data => {
+                console.log('Survey API Success response:', data);
+                if (data.success && data.user) {
+                    console.log('Survey login successful, setting userType to user');
+                    userType = 'user';
+                    showDashboard();
+                } else {
+                    throw new Error(data.error || 'Login failed');
+                }
+            })
+            .catch(error => {
+                console.error('Survey login error:', error);
+                errorDiv.textContent = error.message || 'Login failed. Please try again.';
+                errorDiv.classList.remove('hidden');
+            });
+        }
+
+        function showMainPage() {
+            location.reload(); // Reload to show the main page
         }
 
         function handleAdminLogin(event) {
