--- a/new-index.html
+++ b/new-index.html
@@ -95,6 +95,12 @@
         <!-- Admin Login Section -->
         <div class="max-w-md mx-auto bg-white rounded-xl shadow-lg p-8" id="admin-login">
             <h2 class="text-2xl font-semibold text-gray-900 text-center mb-6">Administrator Access</h2>
+            <div class="mb-4 p-3 bg-gray-50 rounded-lg">
+                <button onclick="testDatabaseConnection()" class="w-full bg-gray-600 hover:bg-gray-700 text-white font-semibold py-2 px-4 rounded-lg transition-colors duration-300 text-sm">
+                    Test Database Connection
+                </button>
+                <div id="db-test-result" class="text-xs mt-2 text-center hidden"></div>
+            </div>
             <form onsubmit="handleAdminLogin(event)" class="space-y-4">
                 <div>
                     <input
@@ -224,6 +230,31 @@
 
         function showMainPage() {
             location.reload(); // Reload to show the main page
+        }
+
+        function testDatabaseConnection() {
+            const resultDiv = document.getElementById('db-test-result');
+            resultDiv.classList.remove('hidden');
+            resultDiv.textContent = 'Testing...';
+            resultDiv.className = 'text-xs mt-2 text-center text-blue-600';
+
+            fetch('/api/test-db')
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    resultDiv.textContent = `✅ Connected! ${data.user_count} users in database`;
+                    resultDiv.className = 'text-xs mt-2 text-center text-green-600';
+                } else {
+                    resultDiv.textContent = `❌ ${data.message}`;
+                    resultDiv.className = 'text-xs mt-2 text-center text-red-600';
+                }
+                console.log('Database test result:', data);
+            })
+            .catch(error => {
+                resultDiv.textContent = '❌ API not available';
+                resultDiv.className = 'text-xs mt-2 text-center text-red-600';
+                console.error('Database test error:', error);
+            });
         }
 
         function handleAdminLogin(event) {
