--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <h2 class="text-2xl font-semibold text-gray-900 text-center mb-6">Administrator Access</h2>
             <div class="mb-4 p-3 bg-gray-50 rounded-lg">
                 <button onclick="testDatabaseConnection()" class="w-full bg-gray-600 hover:bg-gray-700 text-white font-semibold py-2 px-4 rounded-lg transition-colors duration-300 text-sm">
-                    Test Database Connection
+                    Test Database Connection (Updated)
                 </button>
                 <div id="db-test-result" class="text-xs mt-2 text-center hidden"></div>
             </div>
