Add login page with password visibility toggle

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
                 <button onclick="startSurvey()" class="bg-green-600 hover:bg-green-700 text-white font-semibold py-3 px-8 rounded-lg shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1">
                     Start Survey
                 </button>
+                <a href="/login" class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-8 rounded-lg shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1">
+                    Login
+                </a>
                 <a href="#learn-more" class="bg-white hover:bg-gray-50 text-blue-600 font-semibold py-3 px-8 rounded-lg border-2 border-blue-600 shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1">
                     Learn More
                 </a>
