Add Login link to navigation bar on homepage

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     <a href="#features" class="text-gray-600 hover:text-blue-600 transition-colors">Features</a>
                     <a href="#about" class="text-gray-600 hover:text-blue-600 transition-colors">About</a>
                     <a href="#contact" class="text-gray-600 hover:text-blue-600 transition-colors">Contact</a>
+                    <a href="/login" class="text-gray-600 hover:text-blue-600 transition-colors">Login</a>
                 </nav>
     </header>
 
