Link green Start Survey button to login page and fix @types/pg for database script

--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                 We create intelligent surveys that drive organizational improvement through data-driven insights and meaningful feedback.
             </p>
             <div class="flex flex-col sm:flex-row gap-4 justify-center items-center mb-16">
-                <button onclick="startSurvey()" class="bg-green-600 hover:bg-green-700 text-white font-semibold py-3 px-8 rounded-lg shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1">
+                <a href="/login" class="bg-green-600 hover:bg-green-700 text-white font-semibold py-3 px-8 rounded-lg shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1">
                     Start Survey
-                </button>
+                </a>
                 <a href="/login" class="bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-8 rounded-lg shadow-lg hover:shadow-xl transition-all duration-300 transform hover:-translate-y-1">
                     Login
                 </a>
