Remove admin login section from homepage and clean up JavaScript - login now handled via nav bar

--- a/index.html
+++ b/index.html
@@ -94,265 +94,17 @@
             </div>
         </div>
 
-        <!-- Admin Login Section -->
-        <div class="max-w-md mx-auto bg-white rounded-xl shadow-lg p-8" id="admin-login">
-            <h2 class="text-2xl font-semibold text-gray-900 text-center mb-6">Administrator Access - TEST BUTTON BELOW</h2>
-            <div class="mb-4 p-3 bg-gray-50 rounded-lg">
-                <button onclick="testDatabaseConnection()" class="w-full bg-gray-600 hover:bg-gray-700 text-white font-semibold py-2 px-4 rounded-lg transition-colors duration-300 text-sm">
-                    Test Database Connection (Updated)
-                </button>
-                <div id="db-test-result" class="text-xs mt-2 text-center hidden"></div>
-            </div>
-            <form onsubmit="handleAdminLogin(event)" class="space-y-4">
-                <div>
-                    <input
-                        type="text"
-                        id="username"
-                        placeholder="Username"
-                        class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-colors"
-                        required
-                    />
-                </div>
-                <div>
-                    <input
-                        type="password"
-                        id="password"
-                        placeholder="Password"
-                        class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-colors"
-                        required
-                    />
-                </div>
-                <button
-                    type="submit"
-                    class="w-full bg-gray-800 hover:bg-gray-900 text-white font-semibold py-3 px-4 rounded-lg transition-colors duration-300"
-                >
-                    Login as Administrator
-                </button>
-                <div id="error-message" class="text-red-500 text-center mt-4 hidden"></div>
-            </form>
-        </div>
     </main>
 
     <!-- Footer -->
     <footer class="bg-gray-900 text-white py-8 mt-16">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
             <p class="text-gray-400">&copy; 2024 SurveyPro. Transforming feedback into action.</p>
         </div>
     </footer>
 
     <script>
-        let userType = 'guest';
-
         function startSurvey() {
-            // Show login form for survey access
-            const mainContent = document.querySelector('main');
-            mainContent.innerHTML = `
-                <div class="max-w-md mx-auto bg-white rounded-xl shadow-lg p-8">
-                    <h2 class="text-2xl font-semibold text-gray-900 text-center mb-6">Login to Start Survey</h2>
-                    <form onsubmit="handleUserLogin(event)" class="space-y-4">
-                        <div>
-                            <input
-                                type="text"
-                                id="survey-username"
-                                placeholder="Username"
-                                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-colors"
-                                required
-                            />
-                        </div>
-                        <div>
-                            <input
-                                type="password"
-                                id="survey-password"
-                                placeholder="Password"
-                                class="w-full px-4 py-3 border border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 focus:border-transparent transition-colors"
-                                required
-                            />
-                        </div>
-                        <button
-                            type="submit"
-                            class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-3 px-4 rounded-lg transition-colors duration-300"
-                        >
-                            Start Survey
-                        </button>
-                        <div id="survey-error-message" class="text-red-500 text-center mt-4 hidden"></div>
-                        <div class="text-center mt-4">
-                            <button onclick="showMainPage()" class="text-blue-600 hover:text-blue-800 text-sm">
-                                ← Back to Home
-                            </button>
-                        </div>
-                    </form>
-                </div>
-            `;
-        }
-
-        function handleUserLogin(event) {
-            event.preventDefault();
-            const username = document.getElementById('survey-username').value;
-            const password = document.getElementById('survey-password').value;
-            const errorDiv = document.getElementById('survey-error-message');
-
-            // Clear previous error
-            errorDiv.classList.add('hidden');
-
-            // Make API call to login endpoint
-            console.log('Starting survey login request for:', username);
-            fetch('/api/login', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({ username, password })
-            })
-            .then(response => {
-                console.log('Survey API Response status:', response.status);
-                return response.json().then(data => {
-                    if (!response.ok) {
-                        console.log('Survey API Error response:', data);
-                        throw new Error(data.error || 'Login failed');
-                    }
-                    return data;
-                });
-            })
-            .then(data => {
-                console.log('Survey API Success response:', data);
-                if (data.success && data.user) {
-                    console.log('Survey login successful, setting userType to user');
-                    userType = 'user';
-                    showDashboard();
-                } else {
-                    throw new Error(data.error || 'Login failed');
-                }
-            })
-            .catch(error => {
-                console.error('Survey login error:', error);
-                errorDiv.textContent = error.message || 'Login failed. Please try again.';
-                errorDiv.classList.remove('hidden');
-            });
-        }
-
-        function showMainPage() {
-            location.reload(); // Reload to show the main page
-        }
-
-        function testDatabaseConnection() {
-            const resultDiv = document.getElementById('db-test-result');
-            resultDiv.classList.remove('hidden');
-            resultDiv.textContent = 'Testing...';
-            resultDiv.className = 'text-xs mt-2 text-center text-blue-600';
-
-            fetch('/api/test-db')
-            .then(response => response.json())
-            .then(data => {
-                if (data.success) {
-                    resultDiv.textContent = `✅ Connected! ${data.user_count} users in database`;
-                    resultDiv.className = 'text-xs mt-2 text-center text-green-600';
-                } else {
-                    resultDiv.textContent = `❌ ${data.message}`;
-                    resultDiv.className = 'text-xs mt-2 text-center text-red-600';
-                }
-                console.log('Database test result:', data);
-            })
-            .catch(error => {
-                resultDiv.textContent = '❌ API not available';
-                resultDiv.className = 'text-xs mt-2 text-center text-red-600';
-                console.error('Database test error:', error);
-            });
-        }
-
-        function handleAdminLogin(event) {
-            event.preventDefault();
-            const username = document.getElementById('username').value;
-            const password = document.getElementById('password').value;
-            const errorDiv = document.getElementById('error-message');
-
-            // Clear previous error
-            errorDiv.classList.add('hidden');
-
-            // Reset any previous login state
-            userType = 'guest';
-
-            // Make API call to login endpoint
-            console.log('Starting login request for:', username);
-            fetch('/api/login', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify({ username, password })
-            })
-            .then(response => {
-                console.log('API Response status:', response.status);
-                return response.json().then(data => {
-                    if (!response.ok) {
-                        console.log('API Error response:', data);
-                        throw new Error(data.error || 'Login failed');
-                    }
-                    return data;
-                });
-            })
-            .then(data => {
-                console.log('API Success response:', data);
-                if (data.success && data.user) {
-                    console.log('Login successful, setting userType to admin');
-                    userType = 'admin';
-                    showDashboard();
-                } else {
-                    throw new Error(data.error || 'Login failed');
-                }
-            })
-            .catch(error => {
-                console.error('Login error:', error);
-                errorDiv.textContent = error.message || 'Login failed. Please try again.';
-                errorDiv.classList.remove('hidden');
-                // Ensure userType stays as guest on error
-                userType = 'guest';
-            });
-        }
-
-        function showDashboard() {
-            const mainContent = document.querySelector('main');
-            mainContent.innerHTML = `
-                <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8">
-                    <header class="bg-white shadow-sm border-b border-gray-100 mb-8">
-                        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4">
-                            <div class="flex justify-between items-center">
-                                <h1 class="text-2xl font-bold text-gray-900">SurveyPro</h1>
-                                <button onclick="logout()" class="text-blue-600 hover:text-blue-800 transition-colors">
-                                    Logout
-                                </button>
-                            </div>
-                        </div>
-                    </header>
-
-                    <div class="mb-8">
-                        <h1 class="text-3xl font-bold text-gray-900 mb-2">Survey Dashboard</h1>
-                        <p class="text-${userType === 'admin' ? 'green' : 'blue'}-600 font-medium">
-                            Logged in as ${userType === 'admin' ? 'Administrator' : 'User'}
-                        </p>
-                    </div>
-
-                    <div class="bg-white rounded-xl shadow-lg p-8">
-                        <h2 class="text-2xl font-semibold text-gray-900 mb-6">Survey Questions</h2>
-                        <ul class="space-y-6">
-                            <li class="border border-gray-200 rounded-lg p-6 hover:shadow-md transition-shadow duration-300">
-                                <h3 class="text-lg font-semibold text-gray-900 mb-2">1. How satisfied are you with our service?</h3>
-                                <p class="text-sm text-blue-600 font-medium">Category: General</p>
-                                <p class="text-sm text-gray-600">Group: All</p>
-                            </li>
-                            <li class="border border-gray-200 rounded-lg p-6 hover:shadow-md transition-shadow duration-300">
-                                <h3 class="text-lg font-semibold text-gray-900 mb-2">2. Would you recommend us?</h3>
-                                <p class="text-sm text-blue-600 font-medium">Category: General</p>
-                                <p class="text-sm text-gray-600">Group: All</p>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            `;
-        }
-
-        function logout() {
-            userType = 'guest';
-            location.reload();
+            window.location.href = '/login';
         }
     </script>
 </body>
