Force clean index.html rebuild - remove admin section and update title

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <main class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-16">
         <div class="text-center">
             <h1 class="text-5xl md:text-6xl font-bold text-gray-900 mb-6 leading-tight">
-                SURVEYS BY DESIGN - LIVE UPDATE
+                SURVEYS BY DESIGN - CLEAN VERSION
             </h1>
             <p class="text-xl md:text-2xl text-gray-600 mb-8 max-w-3xl mx-auto leading-relaxed">
                 We create intelligent surveys that drive organizational improvement through data-driven insights and meaningful feedback.
